Add omitted changelog entry for x86 stabilization. (Portage version: 2.1.2.5)

--- a/dev-java/ant-owanttask/ChangeLog
+++ b/dev-java/ant-owanttask/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/ant-owanttask
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-owanttask/ChangeLog,v 1.22 2007/04/20 10:41:42 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-owanttask/ChangeLog,v 1.23 2007/05/05 17:01:25 ticho Exp $
+
+  05 May 2007; Andrej Kacian <ticho@gentoo.org> ant-owanttask-1.1-r12:
+	Stable on x86, bug #176856.
 
   20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
   ant-owanttask-1.1-r12.ebuild:
