--- a/dev-perl/File-Copy-Recursive/ChangeLog
+++ b/dev-perl/File-Copy-Recursive/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/File-Copy-Recursive
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Copy-Recursive/ChangeLog,v 1.7 2007/04/10 12:48:12 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Copy-Recursive/ChangeLog,v 1.8 2007/05/05 17:18:59 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  File-Copy-Recursive-0.31.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   File-Copy-Recursive-0.31.ebuild:
