--- a/sys-devel/gcc-config/ChangeLog
+++ b/sys-devel/gcc-config/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gcc-config
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc-config/ChangeLog,v 1.160 2007/05/04 20:28:14 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc-config/ChangeLog,v 1.161 2007/05/05 17:21:01 nixnut Exp $
+
+  05 May 2007; nixnut <nixnut@gentoo.org> gcc-config-1.3.16.ebuild:
+  Stable on ppc wrt bug 176869
 
   04 May 2007; Daniel Gryniewicz <dang@gentoo.org> gcc-config-1.3.16.ebuild:
   Marked stable on amd64 for bug #176869
