--- a/dev-perl/DateTime-Format-W3CDTF/ChangeLog
+++ b/dev-perl/DateTime-Format-W3CDTF/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-Format-W3CDTF
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Format-W3CDTF/ChangeLog,v 1.10 2007/04/16 06:42:04 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Format-W3CDTF/ChangeLog,v 1.11 2007/05/05 17:27:58 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  DateTime-Format-W3CDTF-0.04.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org>
   DateTime-Format-W3CDTF-0.04.ebuild:
