--- a/dev-perl/DateTime-Format-Mail/ChangeLog
+++ b/dev-perl/DateTime-Format-Mail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-Format-Mail
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Format-Mail/ChangeLog,v 1.12 2007/04/16 06:42:46 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Format-Mail/ChangeLog,v 1.13 2007/05/05 17:28:33 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  DateTime-Format-Mail-0.30.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org>
   DateTime-Format-Mail-0.30.ebuild:
