--- a/dev-perl/AnyEvent/ChangeLog
+++ b/dev-perl/AnyEvent/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/AnyEvent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.24 2007/04/26 08:06:24 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.25 2007/05/05 17:29:07 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  AnyEvent-2.5.2.ebuild:
+  ppc stable
 
   26 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   -AnyEvent-2.5.1.ebuild:
