--- a/dev-perl/Apache-Session/ChangeLog
+++ b/dev-perl/Apache-Session/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Apache-Session
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.41 2007/04/14 15:43:14 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Session/ChangeLog,v 1.42 2007/05/05 17:29:44 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Apache-Session-1.81.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Apache-Session-1.81.ebuild:
