--- a/dev-perl/Apache-Test/ChangeLog
+++ b/dev-perl/Apache-Test/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Apache-Test
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.55 2007/04/15 20:22:59 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.56 2007/05/05 17:30:20 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Apache-Test-1.29.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> Apache-Test-1.29.ebuild:
   Stable on ppc64
