--- a/dev-perl/AppConfig/ChangeLog
+++ b/dev-perl/AppConfig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/AppConfig
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AppConfig/ChangeLog,v 1.46 2007/04/15 20:25:53 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AppConfig/ChangeLog,v 1.47 2007/05/05 17:30:58 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  AppConfig-1.64.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> AppConfig-1.63.ebuild:
   Stable on ppc64
