--- a/dev-perl/Archive-Zip/ChangeLog
+++ b/dev-perl/Archive-Zip/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Archive-Zip
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Zip/ChangeLog,v 1.44 2007/04/10 11:37:12 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Zip/ChangeLog,v 1.45 2007/05/05 17:32:10 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Archive-Zip-1.18.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Archive-Zip-1.18.ebuild:
