--- a/dev-perl/Cache-Simple-TimedExpiry/ChangeLog
+++ b/dev-perl/Cache-Simple-TimedExpiry/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Cache-Simple-TimedExpiry
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Simple-TimedExpiry/ChangeLog,v 1.25 2007/03/05 11:20:40 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Simple-TimedExpiry/ChangeLog,v 1.26 2007/05/05 17:32:44 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Cache-Simple-TimedExpiry-0.27.ebuild:
+  ppc stable
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org>
   Cache-Simple-TimedExpiry-0.27.ebuild:
