--- a/dev-perl/Cairo/ChangeLog
+++ b/dev-perl/Cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Cairo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.23 2007/04/16 07:13:57 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.24 2007/05/05 17:33:20 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> Cairo-1.02.2.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> Cairo-1.02.2.ebuild:
   Stable on ppc64
