ppc stable (Portage version: 2.1.2.6)

--- a/dev-perl/Cgi-Simple/ChangeLog
+++ b/dev-perl/Cgi-Simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Cgi-Simple
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cgi-Simple/ChangeLog,v 1.26 2007/04/10 11:44:56 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cgi-Simple/ChangeLog,v 1.27 2007/05/05 17:33:55 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Cgi-Simple-0.079.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Cgi-Simple-0.079.ebuild:
