--- a/x11-libs/guile-gtk/ChangeLog
+++ b/x11-libs/guile-gtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/guile-gtk
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/ChangeLog,v 1.25 2007/03/13 17:43:05 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/ChangeLog,v 1.26 2007/05/05 17:34:12 hkbst Exp $
+
+  05 May 2007; Marijn Schouten <hkBst@gentoo.org> guile-gtk-1.2.0.41.ebuild:
+  dep on guile-1.6, bug 168876
 
   13 Mar 2007; Marijn Schouten <hkBst@gentoo.org> -guile-gtk-0.19-r1.ebuild:
   remove really old 0.19 version
