--- a/net-misc/mindterm/ChangeLog
+++ b/net-misc/mindterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/mindterm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mindterm/ChangeLog,v 1.11 2007/05/03 15:01:20 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mindterm/ChangeLog,v 1.12 2007/05/05 17:34:17 nixnut Exp $
+
+  05 May 2007; nixnut <nixnut@gentoo.org> mindterm-3.0.1.ebuild:
+  Stable on ppc wrt bug 176447
 
   03 May 2007; Raúl Porcel <armin76@gentoo.org> mindterm-3.0.1.ebuild:
   x86 stable wrt #176447
