--- a/dev-perl/Chart/ChangeLog
+++ b/dev-perl/Chart/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Chart
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Chart/ChangeLog,v 1.25 2007/04/10 11:46:25 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Chart/ChangeLog,v 1.26 2007/05/05 17:34:30 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> Chart-2.4.1.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org> Chart-2.4.1.ebuild:
   sparc stable
