--- a/dev-perl/Config-Tiny/ChangeLog
+++ b/dev-perl/Config-Tiny/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Config-Tiny
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Tiny/ChangeLog,v 1.58 2007/04/15 20:35:32 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Tiny/ChangeLog,v 1.59 2007/05/05 17:36:49 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Config-Tiny-2.10.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> Config-Tiny-2.08.ebuild:
   Stable on ppc64
