--- a/dev-perl/Crypt-OpenSSL-RSA/ChangeLog
+++ b/dev-perl/Crypt-OpenSSL-RSA/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Crypt-OpenSSL-RSA
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-OpenSSL-RSA/ChangeLog,v 1.56 2007/04/15 20:37:01 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-OpenSSL-RSA/ChangeLog,v 1.57 2007/05/05 17:37:59 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Crypt-OpenSSL-RSA-0.24.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org>
   Crypt-OpenSSL-RSA-0.24.ebuild:
