--- a/dev-perl/Crypt-SSLeay/ChangeLog
+++ b/dev-perl/Crypt-SSLeay/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Crypt-SSLeay
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.44 2007/04/22 22:43:55 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.45 2007/05/05 17:38:37 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Crypt-SSLeay-0.53.ebuild:
+  ppc stable
 
   22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
   Crypt-SSLeay-0.53.ebuild:
