--- a/dev-perl/DBD-mysql/ChangeLog
+++ b/dev-perl/DBD-mysql/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DBD-mysql
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-mysql/ChangeLog,v 1.74 2007/04/15 20:40:09 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-mysql/ChangeLog,v 1.75 2007/05/05 17:39:22 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  DBD-mysql-3.0008.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> DBD-mysql-3.0008.ebuild:
   Stable on ppc64
