--- a/dev-perl/Data-UUID/ChangeLog
+++ b/dev-perl/Data-UUID/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Data-UUID
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-UUID/ChangeLog,v 1.30 2007/03/10 23:57:51 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-UUID/ChangeLog,v 1.31 2007/05/05 17:40:01 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Data-UUID-0.148.ebuild:
+  ppc stable
 
 *Data-UUID-1.148 (10 Mar 2007)
 
