--- a/dev-perl/DateTime/ChangeLog
+++ b/dev-perl/DateTime/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.46 2007/04/16 06:41:21 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.47 2007/05/05 17:40:43 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  DateTime-0.36.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> DateTime-0.35.ebuild:
   Stable on ppc64
