--- a/dev-perl/DateTime-Locale/ChangeLog
+++ b/dev-perl/DateTime-Locale/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-Locale
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.40 2007/04/15 21:27:20 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.41 2007/05/05 17:41:21 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  DateTime-Locale-0.34.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org>
   DateTime-Locale-0.32.ebuild:
