--- a/dev-perl/DateTime-TimeZone/ChangeLog
+++ b/dev-perl/DateTime-TimeZone/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.69 2007/04/28 02:22:00 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.70 2007/05/05 17:41:58 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  DateTime-TimeZone-0.62.ebuild:
+  ppc stable
 
 *DateTime-TimeZone-0.65.01 (28 Apr 2007)
 
