--- a/dev-perl/Devel-Symdump/ChangeLog
+++ b/dev-perl/Devel-Symdump/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Devel-Symdump
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Symdump/ChangeLog,v 1.49 2007/04/24 08:45:08 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Symdump/ChangeLog,v 1.50 2007/05/05 17:42:37 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Devel-Symdump-2.07.ebuild:
+  ppc stable
 
   24 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
   Devel-Symdump-2.07.ebuild:
