--- a/dev-perl/Email-Find/ChangeLog
+++ b/dev-perl/Email-Find/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Find
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Find/ChangeLog,v 1.20 2007/04/10 12:06:26 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Find/ChangeLog,v 1.21 2007/05/05 17:43:15 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Email-Find-0.10.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Email-Find-0.10.ebuild:
