--- a/dev-perl/Email-Simple/ChangeLog
+++ b/dev-perl/Email-Simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Simple
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.22 2007/04/10 12:19:11 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.23 2007/05/05 17:44:04 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Email-Simple-1.998.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Email-Simple-1.998.ebuild:
