--- a/dev-perl/Email-Valid/ChangeLog
+++ b/dev-perl/Email-Valid/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Valid
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Valid/ChangeLog,v 1.32 2007/04/15 21:30:28 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Valid/ChangeLog,v 1.33 2007/05/05 17:44:39 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Email-Valid-0.179.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> Email-Valid-0.175.ebuild:
   Stable on ppc64
