--- a/dev-perl/Error/ChangeLog
+++ b/dev-perl/Error/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Error
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.47 2007/04/23 22:37:37 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.48 2007/05/05 17:45:14 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Error-0.17.008.ebuild:
+  ppc stable
 
   23 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> Error-0.17.008.ebuild:
   Stable on Mips, bug 173327.
