--- a/dev-perl/Event/ChangeLog
+++ b/dev-perl/Event/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Event
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Event/ChangeLog,v 1.51 2007/04/15 21:32:35 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Event/ChangeLog,v 1.52 2007/05/05 17:45:47 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> Event-1.08.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> Event-1.08.ebuild:
   Stable on ppc64
