--- a/dev-perl/Exporter-Lite/ChangeLog
+++ b/dev-perl/Exporter-Lite/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Exporter-Lite
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Exporter-Lite/ChangeLog,v 1.15 2007/03/05 11:45:34 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Exporter-Lite/ChangeLog,v 1.16 2007/05/05 17:46:20 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Exporter-Lite-0.02.ebuild:
+  ppc stable
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Exporter-Lite-0.02.ebuild:
   Stable on x86, bug #169152.
