--- a/dev-ruby/rmagick/ChangeLog
+++ b/dev-ruby/rmagick/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rmagick
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.56 2007/05/05 09:43:53 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.57 2007/05/05 17:46:27 nixnut Exp $
+
+  05 May 2007; nixnut <nixnut@gentoo.org> rmagick-1.15.5.ebuild:
+  Stable on ppc wrt bug 176595
 
   05 May 2007; Bryan Østergaard <kloeri@gentoo.org> rmagick-1.15.6.ebuild:
   Add ~alpha keyword, bug 176595.
