--- a/dev-perl/File-Flat/ChangeLog
+++ b/dev-perl/File-Flat/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/File-Flat
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Flat/ChangeLog,v 1.46 2007/04/10 12:49:36 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Flat/ChangeLog,v 1.47 2007/05/05 17:46:59 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  File-Flat-1.00.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   File-Flat-1.00.ebuild:
