ppc stable (Portage version: 2.1.2.6)

--- a/dev-perl/File-HomeDir/ChangeLog
+++ b/dev-perl/File-HomeDir/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/File-HomeDir
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-HomeDir/ChangeLog,v 1.26 2007/04/15 20:25:07 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-HomeDir/ChangeLog,v 1.27 2007/05/05 17:47:32 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  File-HomeDir-0.64.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> File-HomeDir-0.58.ebuild:
   Stable on ppc64
