--- a/dev-perl/File-Remove/ChangeLog
+++ b/dev-perl/File-Remove/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/File-Remove
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.40 2007/04/15 21:36:21 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.41 2007/05/05 17:48:10 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  File-Remove-0.34.ebuild:
+  ppc stable
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> File-Remove-0.34.ebuild:
   Stable on ppc64
