--- a/dev-perl/Finance-Quote/ChangeLog
+++ b/dev-perl/Finance-Quote/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Finance-Quote
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-Quote/ChangeLog,v 1.41 2007/04/10 12:50:46 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-Quote/ChangeLog,v 1.42 2007/05/05 17:48:44 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Finance-Quote-1.13.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Finance-Quote-1.13.ebuild:
