--- a/dev-perl/GD/ChangeLog
+++ b/dev-perl/GD/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/GD
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/GD/ChangeLog,v 1.71 2007/04/16 06:00:43 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/GD/ChangeLog,v 1.72 2007/05/05 17:49:23 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> GD-2.35-r1.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> GD-2.35-r1.ebuild:
   Stable on ppc64
