--- a/dev-perl/Graph/ChangeLog
+++ b/dev-perl/Graph/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Graph
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Graph/ChangeLog,v 1.37 2007/04/10 12:54:25 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Graph/ChangeLog,v 1.38 2007/05/05 17:49:57 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> Graph-0.81.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org> Graph-0.81.ebuild:
   sparc stable
