--- a/dev-perl/HTML-Parser/ChangeLog
+++ b/dev-perl/HTML-Parser/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/HTML-Parser
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Parser/ChangeLog,v 1.87 2007/04/16 06:02:55 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Parser/ChangeLog,v 1.88 2007/05/05 17:50:32 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  HTML-Parser-3.56.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> HTML-Parser-3.55.ebuild:
   Stable on ppc64
