--- a/dev-perl/HTML-Template/ChangeLog
+++ b/dev-perl/HTML-Template/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/HTML-Template
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Template/ChangeLog,v 1.34 2007/04/10 12:56:54 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Template/ChangeLog,v 1.35 2007/05/05 17:51:06 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  HTML-Template-2.9.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   HTML-Template-2.9.ebuild:
