--- a/dev-perl/IO-Interface/ChangeLog
+++ b/dev-perl/IO-Interface/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/IO-Interface
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/ChangeLog,v 1.15 2007/04/10 12:58:29 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Interface/ChangeLog,v 1.16 2007/05/05 17:53:19 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  IO-Interface-1.03.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   IO-Interface-1.03.ebuild:
