--- a/dev-perl/IO-Socket-SSL/ChangeLog
+++ b/dev-perl/IO-Socket-SSL/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/IO-Socket-SSL
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.63 2007/04/17 19:39:03 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.64 2007/05/05 17:53:54 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  IO-Socket-SSL-1.02.ebuild:
+  ppc stable
 
 *IO-Socket-SSL-1.05 (17 Apr 2007)
 
