--- a/dev-perl/ImageInfo/ChangeLog
+++ b/dev-perl/ImageInfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/ImageInfo
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/ChangeLog,v 1.49 2007/04/16 06:07:31 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ImageInfo/ChangeLog,v 1.50 2007/05/05 17:54:29 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ImageInfo-1.23.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> ImageInfo-1.23.ebuild:
   Stable on ppc64
