--- a/dev-perl/Lingua-EN-NameParse/ChangeLog
+++ b/dev-perl/Lingua-EN-NameParse/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Lingua-EN-NameParse
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-EN-NameParse/ChangeLog,v 1.16 2007/04/09 15:30:10 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-EN-NameParse/ChangeLog,v 1.17 2007/05/05 17:55:03 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Lingua-EN-NameParse-1.23.ebuild:
+  ppc stable
 
   09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Lingua-EN-NameParse-1.23.ebuild:
