--- a/dev-perl/MIME-Types/ChangeLog
+++ b/dev-perl/MIME-Types/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/MIME-Types
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MIME-Types/ChangeLog,v 1.30 2007/04/06 20:18:12 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MIME-Types/ChangeLog,v 1.31 2007/05/05 17:55:36 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  MIME-Types-1.18.ebuild:
+  ppc stable
 
 *MIME-Types-1.19 (06 Apr 2007)
 
