--- a/dev-perl/MP3-Info/ChangeLog
+++ b/dev-perl/MP3-Info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/MP3-Info
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MP3-Info/ChangeLog,v 1.47 2007/04/16 06:12:36 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MP3-Info/ChangeLog,v 1.48 2007/05/05 17:56:10 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  MP3-Info-1.21.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> MP3-Info-1.20.ebuild:
   Stable on ppc64
