--- a/dev-perl/Mail-Audit/ChangeLog
+++ b/dev-perl/Mail-Audit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Mail-Audit
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Audit/ChangeLog,v 1.41 2007/04/10 13:02:10 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Audit/ChangeLog,v 1.42 2007/05/05 17:56:47 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Mail-Audit-2.214.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Mail-Audit-2.214.ebuild:
