--- a/dev-perl/Mail-Mbox-MessageParser/ChangeLog
+++ b/dev-perl/Mail-Mbox-MessageParser/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Mail-Mbox-MessageParser
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Mbox-MessageParser/ChangeLog,v 1.32 2007/04/10 13:03:14 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Mbox-MessageParser/ChangeLog,v 1.33 2007/05/05 17:57:22 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Mail-Mbox-MessageParser-1.50.00.ebuild:
+  ppc stable
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Mail-Mbox-MessageParser-1.50.00.ebuild:
