--- a/dev-perl/Net-SSLeay/ChangeLog
+++ b/dev-perl/Net-SSLeay/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-SSLeay
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.43 2007/04/23 21:48:12 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.44 2007/05/05 17:58:31 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Net-SSLeay-1.30.ebuild:
+  ppc stable
 
   23 Apr 2007; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.30.ebuild:
   ia64 + x86 stable
