--- a/net-analyzer/arpwatch/ChangeLog
+++ b/net-analyzer/arpwatch/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/arpwatch
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arpwatch/ChangeLog,v 1.44 2007/05/04 18:37:53 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arpwatch/ChangeLog,v 1.45 2007/05/05 17:59:43 nixnut Exp $
+
+  05 May 2007; nixnut <nixnut@gentoo.org> arpwatch-2.1.15-r4.ebuild:
+  Stable on ppc wrt bug 176697
 
   04 May 2007; Daniel Gryniewicz <dang@gentoo.org>
   arpwatch-2.1.15-r4.ebuild:
