--- a/dev-perl/Params-Util/ChangeLog
+++ b/dev-perl/Params-Util/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Params-Util
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Util/ChangeLog,v 1.42 2007/03/11 21:13:25 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Util/ChangeLog,v 1.43 2007/05/05 17:59:48 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Params-Util-0.22.ebuild:
+  ppc stable
 
 *Params-Util-0.23 (11 Mar 2007)
 
