--- a/dev-perl/Spreadsheet-WriteExcel/ChangeLog
+++ b/dev-perl/Spreadsheet-WriteExcel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Spreadsheet-WriteExcel
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-WriteExcel/ChangeLog,v 1.33 2007/04/14 14:08:44 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-WriteExcel/ChangeLog,v 1.34 2007/05/05 18:00:57 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Spreadsheet-WriteExcel-2.18.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Spreadsheet-WriteExcel-2.18.ebuild:
