--- a/dev-perl/Sub-Uplevel/ChangeLog
+++ b/dev-perl/Sub-Uplevel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Sub-Uplevel
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Uplevel/ChangeLog,v 1.39 2007/04/16 13:55:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Uplevel/ChangeLog,v 1.40 2007/05/05 18:01:30 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Sub-Uplevel-0.14.ebuild:
+  ppc stable
 
   16 Apr 2007; Jeroen Roovers <jer@gentoo.org> Sub-Uplevel-0.14.ebuild:
   Marked ~hpppa (bug #174785).
