--- a/dev-perl/Template-Toolkit/ChangeLog
+++ b/dev-perl/Template-Toolkit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Template-Toolkit
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Template-Toolkit/ChangeLog,v 1.41 2007/04/23 12:43:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Template-Toolkit/ChangeLog,v 1.42 2007/05/05 18:02:09 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Template-Toolkit-2.18.ebuild:
+  ppc stable
 
   23 Apr 2007; Raúl Porcel <armin76@gentoo.org>
   Template-Toolkit-2.18.ebuild:
