--- a/dev-perl/Test-Base/ChangeLog
+++ b/dev-perl/Test-Base/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Base
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/ChangeLog,v 1.28 2007/01/22 14:33:41 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/ChangeLog,v 1.29 2007/05/05 18:03:18 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-Base-0.53.ebuild:
+  ppc stable
 
   22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> Test-Base-0.53.ebuild:
   Stable on Alpha + IA64.
