--- a/dev-perl/Test-ClassAPI/ChangeLog
+++ b/dev-perl/Test-ClassAPI/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-ClassAPI
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-ClassAPI/ChangeLog,v 1.19 2007/04/14 15:01:07 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-ClassAPI/ChangeLog,v 1.20 2007/05/05 18:04:17 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-ClassAPI-1.03.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Test-ClassAPI-1.03.ebuild:
