--- a/dev-perl/Test-Exception/ChangeLog
+++ b/dev-perl/Test-Exception/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Exception
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Exception/ChangeLog,v 1.44 2007/04/17 06:22:32 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Exception/ChangeLog,v 1.45 2007/05/05 18:04:51 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-Exception-0.25.ebuild:
+  ppc stable
 
   17 Apr 2007; Markus Rothe <corsair@gentoo.org> Test-Exception-0.25.ebuild:
   Added ~ppc64; bug #174785
