--- a/dev-perl/Test-LongString/ChangeLog
+++ b/dev-perl/Test-LongString/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-LongString
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-LongString/ChangeLog,v 1.20 2007/03/05 12:30:34 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-LongString/ChangeLog,v 1.21 2007/05/05 18:06:01 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-LongString-0.11.ebuild:
+  ppc stable
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Test-LongString-0.11.ebuild:
   Stable on x86, bug #169152.
