--- a/dev-perl/Test-NoWarnings/ChangeLog
+++ b/dev-perl/Test-NoWarnings/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-NoWarnings
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-NoWarnings/ChangeLog,v 1.12 2007/04/14 15:04:01 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-NoWarnings/ChangeLog,v 1.13 2007/05/05 18:07:04 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-NoWarnings-0.083.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Test-NoWarnings-0.083.ebuild:
