--- a/dev-perl/Test-Tester/ChangeLog
+++ b/dev-perl/Test-Tester/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Tester
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Tester/ChangeLog,v 1.14 2007/04/14 15:04:33 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Tester/ChangeLog,v 1.15 2007/05/05 18:07:37 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-Tester-0.104.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Test-Tester-0.104.ebuild:
