--- a/dev-perl/Tk-TableMatrix/ChangeLog
+++ b/dev-perl/Tk-TableMatrix/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Tk-TableMatrix
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tk-TableMatrix/ChangeLog,v 1.42 2007/04/14 15:06:48 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tk-TableMatrix/ChangeLog,v 1.43 2007/05/05 18:08:12 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Tk-TableMatrix-1.2.3.ebuild:
+  ppc stable
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Tk-TableMatrix-1.2.3.ebuild:
