--- a/dev-perl/XML-DT/ChangeLog
+++ b/dev-perl/XML-DT/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/XML-DT
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-DT/ChangeLog,v 1.59 2007/03/05 12:39:21 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-DT/ChangeLog,v 1.60 2007/05/05 18:08:49 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> XML-DT-0.47.ebuild:
+  ppc stable
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> XML-DT-0.47.ebuild:
   Stable on x86, bug #169152.
