--- a/dev-perl/XML-LibXSLT/ChangeLog
+++ b/dev-perl/XML-LibXSLT/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-LibXSLT
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXSLT/ChangeLog,v 1.57 2007/04/16 06:34:29 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXSLT/ChangeLog,v 1.58 2007/05/05 18:10:00 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  XML-LibXSLT-1.62.ebuild:
+  ppc stable
 
   16 Apr 2007; Markus Rothe <corsair@gentoo.org> XML-LibXSLT-1.62.ebuild:
   Stable on ppc64
