ppc stable (Portage version: 2.1.2.6)

--- a/dev-perl/version/ChangeLog
+++ b/dev-perl/version/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/version
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/version/ChangeLog,v 1.39 2007/04/22 11:34:55 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/version/ChangeLog,v 1.40 2007/05/05 18:22:50 dertobi123 Exp $
+
+  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> version-0.70.ebuild:
+  ppc stable
 
 *version-0.72.03 (22 Apr 2007)
 
