Marked stable on amd64 for bug #175465 (Portage version: 2.1.2.5)

--- a/x11-base/xorg-server/ChangeLog
+++ b/x11-base/xorg-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.238 2007/05/05 16:07:09 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.239 2007/05/05 18:36:41 dang Exp $
+
+  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  xorg-server-1.2.0-r3.ebuild:
+  Marked stable on amd64 for bug #175465
 
   05 May 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   xorg-server-1.3.0.0.ebuild:
