revert back to previous version of rc script since that feature is available via the SSD_NICELEVEL env. variable. (Portage version: 2.1.2.2)

--- a/app-admin/syslog-ng/ChangeLog
+++ b/app-admin/syslog-ng/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/syslog-ng
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.155 2007/04/24 22:16:08 eroyf Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.156 2007/05/05 22:54:54 mr_bones_ Exp $
+
+  05 May 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  files/syslog-ng.rc6-r1:
+  revert back to previous version of rc script since that feature is available
+  via the SSD_NICELEVEL env. variable.
 
   24 Apr 2007; Alexander Færøy <eroyf@gentoo.org>
   syslog-ng-1.6.11-r1.ebuild:
