Remove old revision. (Portage version: 2.1.2.5)

--- a/dev-java/nanoxml/ChangeLog
+++ b/dev-java/nanoxml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/nanoxml
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/nanoxml/ChangeLog,v 1.13 2007/05/05 18:23:41 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/nanoxml/ChangeLog,v 1.14 2007/05/06 09:44:53 caster Exp $
+
+  06 May 2007; Vlastimil Babka <caster@gentoo.org> -nanoxml-2.2.3-r1.ebuild:
+  Remove old revision.
 
   05 May 2007; nixnut <nixnut@gentoo.org> nanoxml-2.2.3-r2.ebuild:
   Stable on ppc wrt bug 175998
